5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1674_1101.log
== TEST (2019-05-02 01:09:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia:"))
y = input("Digite o tipo de instalaçao: (R/I/C)")
print("Entrada:",x,"kwh","e tipo",y)
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:10:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia:"))
y = input("Digite o tipo de instalacao: (R/I/C)")
print("Entrada:",x,"kwh","e tipo",y)
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:11:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:12:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ".lower())
print("Entrada:",x,"kwh","e tipo",y)
-- OUTPUT:
digite o tipo de instalacao (r/i/c)?: Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:12:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.lower())
-- OUTPUT:
Entrada: -56.0 kwh e tipo i
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:12:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:18:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else(x>500):
		z = 0.65*x
		
		
-- ERROR:
File "XXXX", line 11
    else(x>500):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:19:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:19:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:20:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:24:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:25:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:25:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
		
		
		
-- EXECUTION TIME:
0.149891
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:26:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:26:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
		
		
		
-- EXECUTION TIME:
0.22343
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:28:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:33:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:34:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:37:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print(round("Valor total: R$",z,2))
	else:
		z = 0.65*x
		print(round("Valor total: R$",z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print(round("Valor total: R$",z,2))
	else:
		z = 0.60*x
		print(round("Valor total: R$",z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print(round("Valor total: R$",z,2))
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:40:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",z)
	else:
		z = 0.65*x
		print("Valor total: R$",z)
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
		print("Valor total: R$",z)
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",z)
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:42:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:42:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- EXECUTION TIME:
0.204845
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:43:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:43:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:43:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:44:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- EXECUTION TIME:
0.136947
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:44:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- EXECUTION TIME:
0.173377
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:44:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kwh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:47:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kWh","e tipo",y.upper())
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- EXECUTION TIME:
0.189354
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:47:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kWh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- EXECUTION TIME:
0.158191
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:48:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kWh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:48:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entrada:",x,"kWh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- OUTPUT:
Entrada: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:50:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Digite o consumo de energia: "))
y = input("Digite o tipo de instalacao (R/I/C)?: ")
print("Entradas:",x,"kWh","e tipo",y)
if((x>0)and(y=="R")):
	if(x<=500):
		z = 0.44*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.65*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="C")):
	if(x<=1000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
		print("Valor total: R$",round(z,2))
elif((x>0)and(y=="I")):
	if(x<=5000):
		z = 0.55*x
		print("Valor total: R$",round(z,2))
	else:
		z = 0.60*x
else:
	print("Dados invalidos")
		
		
		
-- EXECUTION TIME:
0.178872
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
